# co-researcher

./: .gitignore  AGENTS.md  CNAME  CONTRIBUTING.md  GEMINI.md  KnowledgeGraph.md  LICENSE  MODEL_SELECTION.md  PUBLISHING.md  ProjectContext.md  README.md  SECURITY.md  gemini-extension.json  index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md  bootstrap.md  co-researcher-codex
.codex-plugin/: plugin.json
.opencode/: INSTALL.md  install.sh
agents/: critical-analyzer.md  ethics-expert.md  grant-writer.md  hypothesis-explorer.md  lateral-thinker.md  literature-reviewer.md  methodology-expert.md  peer-reviewer.md  qual-researcher.md  quant-analyst.md
commands/: analyze.md  analyze.toml  bibliography.md  bibliography.toml  ethics.md  ethics.toml  eval.md  grant.md  grant.toml  methodology.md  methodology.toml  research.md  research.toml  review.md  review.toml  synthesize.md  synthesize.toml
evals/: README.md  arena.html  benchmark_history.json  benchmark_overview.json  (+3 more)
evals/claim-verifier-benchmark/: README.md  pyproject.toml
evals/claim-verifier-benchmark/fixtures/: split-vector.json
evals/claim-verifier-benchmark/fixtures/coverage/: mixed-citations.json  repeated-sentence.json
evals/claim-verifier-benchmark/src/claim_verifier_benchmark/: __init__.py  canonical.py  cli.py  commitment.py  constants.py  coverage_units.py  split.py
evals/claim-verifier-benchmark/tests/: test_canonical.py  test_cli.py  test_commitment.py  test_constants.py  test_coverage_units.py  test_split.py
(+145 files in other folders)
